2004-09-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/pubs.html (href): Add Dave Phillips articles.

2004-09-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Spell LilyPond as LilyPond.

2004-08-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/switch/testimonials.html: add Orm's quote
	(href): continue with tour link.

	* site/switch/howto.html: language fix.

	* site/download/index.html: use & characters.

2004-08-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/big-page.py: take directory as argument.

	* big-page.py: move to scripts/

2004-08-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/about/automated-engraving/typography-features.html: remark
	about rounded corners.

2004-07-31  Heikki Junes  <hjunes@cc.hut.fi>

	* site/images/flaticon.png: new file.

	* format-page.py: add shortcut icon (above).

	* site/images/flaticon.png: renamed.
	* site/images/shortcut.png: new file.
	
2004-07-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* GNUmakefile: add SCRIPTDIR variable.

2004-07-26  Heikki Junes  <hjunes@cc.hut.fi>

	* site/index.html: workaround for most common browsers.
	
	* site/images/black.png: shrink to 1x1 px.
	
2004-07-25  Heikki Junes  <hjunes@cc.hut.fi>

	* site/index.html: make home page look more similar in different
	  browsers.

2004-07-22  Heikki Junes  <hjunes@cc.hut.fi>

	* site/images/black.png: add file to be used with border lines in
	tables.

2004-07-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/switch/tour.html (href): add link to cs.uu.nl site.  

	* site/download/index.html: add 2.2.4 download links

2004-06-18  Heikki Junes  <hjunes@cc.hut.fi>

	* newweb.css (hr): use thin black horizontal line.

	* site/index.html (Quick links): use thin lines for table.

2004-06-16  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/download/index.html: debian and fink packages for 2.3.4
	and freeBSD for 2.2.2 and 2.3.4.

	* format-page.py (do_one_file): Added regular expression to strip
	the Date keyword from files.