@@ -39,7 +39,7 @@
 	<a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">Planet CCRMA</a>
       </b>
     </td>
-    <td>2.2.0</td>
+    <td>2.2.5</td>
     <td>
       <a href="mailto:planetccrma@ccrma.stanford.edu">PlanetCCRMA</a></td>
   </tr>
@@ -55,7 +55,7 @@
     <td> <b>Go to <a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
 	  Planet CCRMA</a></b>
     </td>
-    <td>2.2.0</td>
+    <td>2.2.5</td>
     <td>
       <a href="mailto:planetccrma@ccrma.stanford.edu">
 	PlanetCCRMA</a></td>
